# CS401_Project

./: install.md
backend/: .gitignore  index.html  index.js  package-lock.json  package.json
backend_all/: .gitignore  index.js  package.json
cpp_code/: CMakeLists.txt  cpu.cpp  cpu_mpi.cpp  cpu_single.cpp  filters.cuh  gpu.cu  main.cu  mpi.cpp  omp.cpp  temp.cpp
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  config.js  index.css  index.js
frontend/src/components/: HomePage.js  Icon.js  ImageGrid.js  ImageModal.js  JobDashboard.js  JobList.js  StatCard.js  StatusBadge.js  StatusIndicator.js  Uploader.js
